--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -75,21 +75,17 @@ jobs:
           path: /tmp/${{env.IMAGE}}-minimal.tar
           retention-days: 1
 
+  push:
+    name: push
+    environment: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: dockerhub-login
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
 
-#  push:
-#    name: push
-#    runs-on: ubuntu-20.04
-#    secrets:
-#      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-#      DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
-#    steps:
-#      - name: dockerhub-login
-#        uses: docker/login-action@v2
-#        with:
-#          username: {{ DOCKERHUB_USERNAME }}
-#          password: {{ DOCKERHUB_TOKEN }}
-
-
-#concurrency:
-#  cancel-in-progress: true
+concurrency:
+  cancel-in-progress: true
