--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - main
 
+concurrency:
+  group: ${{ github.ref }}
+  cancel-in-progress: true
+
 env:
   # Base image with CUDA
   ROOT_CONTAINER: "nvidia/cuda:11.6.2-cudnn8-runtime-ubuntu20.04"
@@ -77,15 +81,41 @@ jobs:
 
   push:
     name: push
+    needs: build
     environment: build
     runs-on: ubuntu-latest
     steps:
+      - name: set up buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: set up docker layer cache
+        uses: actions/cache@v3
+        with:
+          path: /tmp/.buildx-cache
+          key: buildx-cache-${{ env.GITHUB_REF_NAME }}
+          restore-keys: |
+            buildx-cache-
+
       - name: dockerhub-login
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-
-concurrency:
-  cancel-in-progress: true
+      ### https://github.com/docker/build-push-action/blob/master/docs/advanced/cache.md#local-cache
+      - name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          push: true
+          tags: ${{ env.OWNER }}/${{ env.IMAGE}}:latest
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
+      -
+        # Temp fix
+        # https://github.com/docker/build-push-action/issues/252
+        # https://github.com/moby/buildkit/issues/1896
+        name: Move cache
+        run: |
+          rm -rf /tmp/.buildx-cache
+          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
