--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -18,7 +18,7 @@ env:
 
 jobs:
   build:
-    name: build
+    name: build-push
     runs-on: ubuntu-20.04
     steps:
       - name: set up buildx
@@ -64,37 +64,37 @@ jobs:
           BUILDKIT_PROGRESS: plain
         shell: bash
 
-      - name: save-tarball
-        run: |
-          docker save ${{env.OWNER}}/minimal-notebook -o /tmp/${{env.IMAGE}}-minimal.tar
-        env:
-          DOCKER_BUILDKIT: 1
-          BUILDKIT_PROGRESS: plain
-        shell: bash
+  #     - name: save-tarball
+  #       run: |
+  #         docker save ${{env.OWNER}}/minimal-notebook -o /tmp/${{env.IMAGE}}-minimal.tar
+  #       env:
+  #         DOCKER_BUILDKIT: 1
+  #         BUILDKIT_PROGRESS: plain
+  #       shell: bash
 
-      - name: upload image as artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: ${{env.IMAGE}}-minimal
-          path: /tmp/${{env.IMAGE}}-minimal.tar
-          retention-days: 1
+  #     - name: upload image as artifact
+  #       uses: actions/upload-artifact@v3
+  #       with:
+  #         name: ${{env.IMAGE}}-minimal
+  #         path: /tmp/${{env.IMAGE}}-minimal.tar
+  #         retention-days: 1
 
-  push:
-    name: push
-    needs: build
-    environment: build
-    runs-on: ubuntu-latest
-    steps:
-      - name: set up buildx
-        uses: docker/setup-buildx-action@v2
+  # push:
+  #   name: push
+  #   needs: build
+  #   environment: build
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: set up buildx
+  #       uses: docker/setup-buildx-action@v2
 
-      - name: set up docker layer cache
-        uses: actions/cache@v3
-        with:
-          path: /tmp/.buildx-cache
-          key: buildx-cache-${{ env.GITHUB_REF_NAME }}
-          restore-keys: |
-            buildx-cache-
+  #     - name: set up docker layer cache
+  #       uses: actions/cache@v3
+  #       with:
+  #         path: /tmp/.buildx-cache
+  #         key: buildx-cache-${{ env.GITHUB_REF_NAME }}
+  #         restore-keys: |
+  #           buildx-cache-
 
       - name: dockerhub-login
         uses: docker/login-action@v2
