--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -41,13 +41,17 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: jupyter-docker-stacks/base-notebook
-          # load: true
+          load: true
           # Tagging `base` image with name as expected by `minimal` Dockerfile!
           tags: ${{env.OWNER}}/base-notebook
           build-args: |
             ROOT_CONTAINER=${{env.ROOT_CONTAINER}}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+
+      - name: list-docker-images
+        run: |
+          docker images
 
       # - # Temp fix
       #   # https://github.com/docker/build-push-action/issues/252
@@ -58,16 +62,17 @@ jobs:
       #     mv /tmp/.buildx-cache-new /tmp/.buildx-cache
 
 
-  #     - name: build-minimal-image
-  #       uses: docker/build-push-action@v3
-  #       with:
-  #         context: jupyter-docker-stacks/minimal-notebook
-  #         # load: true
-  #         tags: ${{env.OWNER}}/minimal-notebook
-  #         build-args: |
-  #           OWNER=${{env.OWNER}}
-  #         cache-from: type=local,src=/tmp/.buildx-cache
-  #         cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
+      - name: build-minimal-image
+        uses: docker/build-push-action@v3
+        with:
+          context: jupyter-docker-stacks/minimal-notebook
+          pull: false
+          # load: true
+          tags: ${{env.OWNER}}/minimal-notebook
+          build-args: |
+            OWNER=${{env.OWNER}}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
   #     - # Temp fix
   #       # https://github.com/docker/build-push-action/issues/252
