--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -24,14 +24,6 @@ jobs:
       - name: set up buildx
         uses: docker/setup-buildx-action@v2
 
-      # - name: set up docker layer cache
-      #   uses: actions/cache@v3
-      #   with:
-      #     path: /tmp/.buildx-cache
-      #     key: buildx-cache-${{ env.GITHUB_REF_NAME }}
-      #     restore-keys: |
-      #       buildx-cache-
-
       - name: checkout
         uses: actions/checkout@v3
         with:
@@ -59,15 +51,6 @@ jobs:
         run: |
           docker images
 
-      # - # Temp fix
-      #   # https://github.com/docker/build-push-action/issues/252
-      #   # https://github.com/moby/buildkit/issues/1896
-      #   name: Move cache
-      #   run: |
-      #     rm -rf /tmp/.buildx-cache
-      #     mv /tmp/.buildx-cache-new /tmp/.buildx-cache
-
-
       - name: build-minimal-image
         uses: docker/build-push-action@v3
         with:
@@ -78,61 +61,9 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-  #     - # Temp fix
-  #       # https://github.com/docker/build-push-action/issues/252
-  #       # https://github.com/moby/buildkit/issues/1896
-  #       name: Move cache
-  #       run: |
-  #         rm -rf /tmp/.buildx-cache
-  #         mv /tmp/.buildx-cache-new /tmp/.buildx-cache
-
-  # #     - name: save-tarball
-  # #       run: |
-  # #         docker save ${{env.OWNER}}/minimal-notebook -o /tmp/${{env.IMAGE}}-minimal.tar
-  # #       env:
-  # #         DOCKER_BUILDKIT: 1
-  # #         BUILDKIT_PROGRESS: plain
-  # #       shell: bash
-
-  # #     - name: upload image as artifact
-  # #       uses: actions/upload-artifact@v3
-  # #       with:
-  # #         name: ${{env.IMAGE}}-minimal
-  # #         path: /tmp/${{env.IMAGE}}-minimal.tar
-  # #         retention-days: 1
-
-  # # push:
-  # #   name: push
-  # #   needs: build
-  # #   environment: build
-  # #   runs-on: ubuntu-latest
-  # #   steps:
-  # #     - name: set up buildx
-  # #       uses: docker/setup-buildx-action@v2
-
-  # #     - name: set up docker layer cache
-  # #       uses: actions/cache@v3
-  # #       with:
-  # #         path: /tmp/.buildx-cache
-  # #         key: buildx-cache-${{ env.GITHUB_REF_NAME }}
-  # #         restore-keys: |
-  # #           buildx-cache-
-
-
-  #     ### https://github.com/docker/build-push-action/blob/master/docs/advanced/cache.md#local-cache
-  #     - name: Build and push
-  #       uses: docker/build-push-action@v3
-  #       with:
-  #         context: .
-  #         push: true
-  #         tags: ${{ env.OWNER }}/${{ env.IMAGE}}:latest
-  #         cache-from: type=local,src=/tmp/.buildx-cache
-  #         cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
-
-  #     - # Temp fix
-  #       # https://github.com/docker/build-push-action/issues/252
-  #       # https://github.com/moby/buildkit/issues/1896
-  #       name: Move cache
-  #       run: |
-  #         rm -rf /tmp/.buildx-cache
-  #         mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+#      - name: upload image as artifact
+#        uses: actions/upload-artifact@v3
+#        with:
+#          name: ${{env.IMAGE}}-minimal
+#          path: /tmp/${{env.IMAGE}}-minimal.tar
+#          retention-days: 1
